# dynamodb-viewer

./: .env.example  .gitignore  EXAMPLES.py  PROJECT_STRUCTURE.txt  README.md  README_FIX.py  READY_TO_USE.txt  USAGE.md  build_linux.sh  capture_error.py  demo_performance.py  diagnostic_test.py  dynamodb_viewer-1.py  dynamodb_viewer.py  dynamodb_viewer.spec  examples_batch_import.py  import_all_dumps.sh  import_large_dumps.py  launch.bat  launch.sh  main.py  pyproject.toml  quick_import.sh  requirements.txt  setup-local-dynamodb.bat  setup-local-dynamodb.sh  setup.bat  setup.sh  test.sh  test_attributes.py  test_batch_import.py  test_comprehensive_fix.py  test_performance_fix.py  validate_fix.py  verificar_fix.py
docs/: ARCHITECTURE.md  BATCH_IMPORT_GUIDE.md  BATCH_IMPORT_OPTIMIZATION.md  BATCH_WRITE_FIX.md  BULK_DELETE_FEATURE.md  COMO_PESQUISAR.md  CONNECTION_DIALOG_GUIDE.md  DIAGNOSTICO_PERFORMANCE.md  DYNAMODB_LOCAL_GUIDE.md  ENVIRONMENT_DIALOG_GUIDE.md  FINAL_SUMMARY.md  FIX_SUMMARY.md  GETTING_STARTED.md  GUIA_PRATICO.md  INDEX.md  INDICE.md  INSTALACAO.md  LOCAL_SETUP_SUMMARY.md  MELHORIAS_PERFORMANCE.md  MIGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  QUICKSTART.md  QUICK_START.md  QUICK_START_BATCH_IMPORT.md  README.md  RECURSOS_CRIADOS.md  REFACTORING_SUMMARY.md  RESUMO_EXECUTIVO.md  VALIDATION_CHECKLIST.md  VERSION_UPDATE.md  VISUAL_SUMMARY.md
src/: __init__.py  config.py
src/models/: __init__.py  filter_row.py
src/services/: __init__.py  batch_importer.py  dynamodb_service.py
src/utils/: encoders.py  resource_paths.py
(+8 files in other folders)
