[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamodb-viewer"
version = "1.0.0"
description = "Visualizador de tabelas DynamoDB com filtros, importação em lote e suporte a AWS e DynamoDB Local"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "DynamoDB Viewer"}
]
keywords = ["dynamodb", "aws", "gui", "viewer", "tkinter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "boto3>=1.26.0",
    "tqdm>=4.65.0",
    "ijson>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
dynamodb-viewer = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools]
py-modules = ["main"]
